{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 34,
  "lineage": "af1d04a4-2885-a765-5b75-58708b2fea4d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:subnet/subnet-0fe42535e1c009547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "available_ip_address_count": 250,
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet-Private : Private Subnet 1"
                ]
              }
            ],
            "id": "subnet-0fe42535e1c009547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862008598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-00735283555d28957"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027f02ccbe824a8c4",
            "association_id": "eipassoc-09b2a943bb5402624",
            "domain": "vpc",
            "id": "eipalloc-027f02ccbe824a8c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05c947401606cd331",
            "private_dns": "ip-10-0-3-203.ec2.internal",
            "private_ip": "10.0.3.203",
            "public_dns": "ec2-54-144-30-223.compute-1.amazonaws.com",
            "public_ip": "54.144.30.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1223e273a5db03e",
            "association_id": "eipassoc-093332ad759706b42",
            "domain": "vpc",
            "id": "eipalloc-0e1223e273a5db03e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0427da92a7729bcb3",
            "private_dns": "ip-10-0-4-128.ec2.internal",
            "private_ip": "10.0.4.128",
            "public_dns": "ec2-44-209-199-182.compute-1.amazonaws.com",
            "public_ip": "44.209.199.182",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-079db87dc4c10ac91",
            "arn": "arn:aws:ec2:us-east-1:656862008598:instance/i-08de02a2bbbe6167f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08de02a2bbbe6167f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05c7ad280ad5e424d",
            "private_dns": "ip-10-0-3-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08e1b9189b6a69437",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fe42535e1c009547",
            "tags": {
              "Name": "EC2 Private subnet 1"
            },
            "tags_all": {
              "Name": "EC2 Private subnet 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06270e99c2bbebece"
            ]
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.danyal_private_route_table",
            "aws_route_table_association.private_subnet_association",
            "aws_security_group.sg_vpc_danyal_us_east_1",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1",
            "data.aws_subnet.Private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:internet-gateway/igw-0690b7041bc5ee0b8",
            "id": "igw-0690b7041bc5ee0b8",
            "owner_id": "656862008598",
            "tags": {
              "Name": "IGW: For Danyal US East Project"
            },
            "tags_all": {
              "Name": "IGW: For Danyal US East Project"
            },
            "vpc_id": "vpc-00735283555d28957"
          },
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027f02ccbe824a8c4",
            "association_id": "eipassoc-09b2a943bb5402624",
            "connectivity_type": "public",
            "id": "nat-039ba59de3445fcc0",
            "network_interface_id": "eni-05c947401606cd331",
            "private_ip": "10.0.3.203",
            "public_ip": "54.144.30.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fe42535e1c009547",
            "tags": {
              "Name": "Private NAT GW: For Danyal US East Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For Danyal US East Project"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e1223e273a5db03e",
            "association_id": "eipassoc-093332ad759706b42",
            "connectivity_type": "public",
            "id": "nat-065361b385071caa4",
            "network_interface_id": "eni-0427da92a7729bcb3",
            "private_ip": "10.0.4.128",
            "public_ip": "44.209.199.182",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaabb94027ece9fd",
            "tags": {
              "Name": "Private NAT GW: For Danyal US East Project"
            },
            "tags_all": {
              "Name": "Private NAT GW: For Danyal US East Project"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "danyal_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:route-table/rtb-0258f1dfd8b8c85da",
            "id": "rtb-0258f1dfd8b8c85da",
            "owner_id": "656862008598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-039ba59de3445fcc0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Danyal US East Project "
            },
            "tags_all": {
              "Name": "RT Private: For Danyal US East Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-00735283555d28957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:route-table/rtb-0d78e2f9e60fe86e2",
            "id": "rtb-0d78e2f9e60fe86e2",
            "owner_id": "656862008598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-065361b385071caa4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For Danyal US East Project "
            },
            "tags_all": {
              "Name": "RT Private: For Danyal US East Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-00735283555d28957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "danyal_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:route-table/rtb-0fb69af7cbac6f82c",
            "id": "rtb-0fb69af7cbac6f82c",
            "owner_id": "656862008598",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0690b7041bc5ee0b8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public: For Danyal US East Project "
            },
            "tags_all": {
              "Name": "RT Public: For Danyal US East Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-00735283555d28957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be7f027626a09731",
            "route_table_id": "rtb-0258f1dfd8b8c85da",
            "subnet_id": "subnet-0fe42535e1c009547"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.danyal_private_route_table",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a617f2445c603d0",
            "route_table_id": "rtb-0d78e2f9e60fe86e2",
            "subnet_id": "subnet-0eaabb94027ece9fd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.danyal_private_route_table",
            "aws_subnet.aws_danyal_private_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051e686a3107ca081",
            "route_table_id": "rtb-0fb69af7cbac6f82c",
            "subnet_id": "subnet-061dc43e172ef294e"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.danyal_public_route_table",
            "aws_subnet.aws_danyal_public_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0194a7d78d533fb4d",
            "route_table_id": "rtb-0fb69af7cbac6f82c",
            "subnet_id": "subnet-03a3731316237af61"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.danyal_public_route_table",
            "aws_subnet.aws_danyal_public_subnets",
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_danyal_us_east_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:security-group/sg-06270e99c2bbebece",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-06270e99c2bbebece",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240120163348074200000001",
            "name_prefix": "terraform-",
            "owner_id": "656862008598",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG : vpc-danyal-us-east-1 "
            },
            "tags_all": {
              "Name": "SG : vpc-danyal-us-east-1 "
            },
            "timeouts": null,
            "vpc_id": "vpc-00735283555d28957"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_danyal_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:subnet/subnet-0fe42535e1c009547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe42535e1c009547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862008598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-00735283555d28957"
          },
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:subnet/subnet-0eaabb94027ece9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaabb94027ece9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862008598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-00735283555d28957"
          },
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_danyal_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:subnet/subnet-061dc43e172ef294e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061dc43e172ef294e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862008598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-00735283555d28957"
          },
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:subnet/subnet-03a3731316237af61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a3731316237af61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862008598",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "vpc_id": "vpc-00735283555d28957"
          },
          "dependencies": [
            "aws_vpc.vpc-danyal-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-danyal-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862008598:vpc/vpc-00735283555d28957",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c39e2bb8ac4e47ff",
            "default_route_table_id": "rtb-0d889d1ec999b21ae",
            "default_security_group_id": "sg-0c75833289cae04f9",
            "dhcp_options_id": "dopt-08b6bd747defcd564",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00735283555d28957",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d889d1ec999b21ae",
            "owner_id": "656862008598",
            "tags": {
              "Name": "VPC: vpc-danyal-us-east-1"
            },
            "tags_all": {
              "Name": "VPC: vpc-danyal-us-east-1"
            }
          }
        }
      ]
    }
  ]
}